# musicgenerator

./: :  README.md  app.py  pyproject.toml  toteutusdokumentti.md
Dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
src/: config.py  gui.py  main.py
src/data/OPETUSDATA/midi/: generated_melody.mid  generated_melody.txt
src/data/generoidut/: generoitu_melodia.mid  melodia_1.mid  melodia_2.mid  melodia_3.mid  melodia_4.mid
src/io/: midi_io.py  text_io.py
src/model/: generator.py  markov.py  trainer.py  trie.py
src/tests/: __init__.py  markov_test.py  trie_test.py
src/utilities/: midi_parser.py  midi_utils.py  notes.py
testikansio/: .tekstitesti.txt.swp
tests/: test_markov.py  test_trainer.py  test_trie.py
