[project]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = [
    {name = "vilimah",email = "vilimahonen@icloud.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "cowsay (==1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pytest = "^8.4.1"

